RESOLVED FIXED113512
[GStreamer] playback gets bumpy sometimes when on-disk buffering is slow
https://bugs.webkit.org/show_bug.cgi?id=113512
Summary [GStreamer] playback gets bumpy sometimes when on-disk buffering is slow
Philippe Normand
Reported 2013-03-28 10:09:25 PDT
We should pause the pipeline when we get a buffering message that is not the final one. This is a strong advice from the GStreamer developers :)
Attachments
patch (2.09 KB, patch)
2013-03-28 10:12 PDT, Philippe Normand
mrobinson: review+
Philippe Normand
Comment 1 2013-03-28 10:12:55 PDT
Martin Robinson
Comment 2 2013-03-28 10:17:49 PDT
Comment on attachment 195589 [details] patch Does the player automatically unpause?
Philippe Normand
Comment 3 2013-03-28 10:39:15 PDT
(In reply to comment #2) > (From update of attachment 195589 [details]) > Does the player automatically unpause? Yes when buffering is finished and also once the pipeline pre-rolled.
Martin Robinson
Comment 4 2013-03-28 10:43:06 PDT
Comment on attachment 195589 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=195589&action=review > Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:806 > + if (!m_paused && (m_bufferingPercentage < 100)) { You can probably dispense with the inner parenthesis here.
Philippe Normand
Comment 5 2013-03-29 04:28:35 PDT
Note You need to log in before you can comment on or make changes to this bug.