[GStreamer] playback gets bumpy sometimes when on-disk buffering is slow https://bugs.webkit.org/show_bug.cgi?id=113512

Reviewed by Martin Robinson.

When the HTTP source element is slow downloading data for on-disk
buffering the playback position might reach an unbuffered region
and have bad consequences, pausing the pipeline beforehand
prevents this case to happen.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::processBufferingStats):

Canonical link: https://commits.webkit.org/131921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147206 268f45cc-cd09-0410-ab3c-d52691b4dbfc